--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="first-layer" id="first-layer">
         <button onclick="getRide1stLayer()">Got it</button>
     </div>
-    <main>
+    <main id="main">
         <section class="main__section">
             <section class="shape-status">
 
@@ -30,5 +30,7 @@
     </main>
     
     <script src="./index.js"></script>
+    <script src="./js/const.js"></script>
+    <script src="./js/logic.js"></script>
 </body>
 </html>
